--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:src="@mipmap/ic_launcher"
             android:layout_marginTop="8dp"
             android:layout_gravity="center"
             android:layout_width="200dp"
