--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/ic_launcher_background"
                 android:id="@+id/iv_avatar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
