--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,7 +20,6 @@
             android:orientation="vertical">
 
             <ImageView
-                android:src="@drawable/ic_launcher_background"
                 android:id="@+id/iv_avatar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -37,7 +36,6 @@
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
                 android:gravity="center"
-                android:text="Real Madrid"
                 android:textSize="20sp" />
 
             <TextView
@@ -47,7 +45,6 @@
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
                 android:gravity="center"
-                android:text="Santiago Bernabeau"
                 android:textSize="18sp" />
 
             <TextView
@@ -57,7 +54,6 @@
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
                 android:gravity="center"
-                android:text="White - Black - Pink"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -114,12 +110,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/margin"
         android:gravity="center"
+        android:background="@drawable/des_button"
+        android:textColor="@color/colorWhite"
         android:text="Website"
         android:textAllCaps="false"
-        android:textSize="20sp"
         app:layout_anchor="@id/cv_container"
         app:layout_anchorGravity="bottom" />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
