--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp"
-    app:cardCornerRadius="16dp">
+    android:layout_margin="@dimen/small_margin"
+    app:cardCornerRadius="@dimen/margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,22 +12,21 @@
         android:orientation="vertical">
 
         <ImageView
-            android:src="@mipmap/ic_launcher"
-            android:layout_marginTop="8dp"
+            android:layout_margin="@dimen/small_margin"
+            android:padding="@dimen/small_margin"
             android:layout_gravity="center"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:id="@+id/iv_avatar"
             />
         <TextView
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Real Madrid"
-            android:textSize="20sp"
+            android:textSize="@dimen/heading_1"
             android:layout_gravity="center"
             android:gravity="center"
             android:id="@+id/tv_name"
@@ -37,8 +36,7 @@
             android:layout_margin="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Santiago Bernabeau"
-            android:textSize="18sp"
+            android:textSize="@dimen/heading_2"
             android:layout_gravity="center"
             android:gravity="center"
             android:id="@+id/tv_venue"
@@ -49,32 +47,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textSize="@dimen/heading_2"
             android:layout_margin="8dp"
-            android:gravity="center"
-            android:text="White - Black - Pink"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/tv_squad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="8dp"
-            android:gravity="center"
-            android:text="Team Squad"
-            android:textSize="18sp" />
+            android:gravity="center" />
 
         <Button
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin"
             android:id="@+id/btn_website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:background="@drawable/des_button"
+            android:textColor="@color/colorWhite"
             android:text="Website"
-            android:textAllCaps="false"
-            android:textSize="20sp" />
-
+            android:textAllCaps="false"/>
 
     </LinearLayout>
 
