--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#492981</color>
-    <color name="colorAccent">#FFEB3B</color>
+    <color name="colorPrimary">#6C30C4</color>
+    <color name="colorPrimaryDark">#512592</color>
+    <color name="colorAccent">#02E9D3</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
+
+
 </resources>
