--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="small_margin">8dp</dimen>
     <dimen name="heading_1">20sp</dimen>
     <dimen name="heading_2">16sp</dimen>
+    <dimen name="fab_bottom">128dp</dimen>
 
 </resources>
